Update version to 2.10 - NamelessMC v2-pr13

--- a/upload/modules/Staff/language/cs_CZ.json
+++ b/upload/modules/Staff/language/cs_CZ.json
@@ -1,23 +1,23 @@
 {
-    "general/cancel": "Zrušit",
-    "general/dashboard": "Nástěnka",
-    "general/error": "Chyba",
-    "general/errorEdit": "Ujistěte se, že jste správně vyplnili všechna pole.",
-    "general/errorToken": "Neplatný token! Zkuste to prosím znovu.",
-    "general/footer": "Zápatí",
-    "general/linkLocation": "Umístění odkazu",
-    "general/linkPath": "Cesta ke stránce",
-    "general/navIcon": "Ikona v navigaci",
-    "general/navOrder": "Pořadí v navigaci",
-    "general/navbar": "Navigační lišta",
-    "general/navbarMoreDropdown": "Rozbalovací nabídka",
-    "general/none": "Žádné",
-    "general/pageTitle": "Název stránky",
-    "general/panel": "Panel",
-    "general/permission": "Panel > Nastavení stránky týmu",
-    "general/settings": "Nastavení stránky týmu",
-    "general/settingsUpdated": "Nastavení byla úspěšně aktualizována.",
-    "general/submit": "Potvrdit",
-    "general/success": "Úspěch",
-    "general/title": "Tým"
+	"general\/title": "Tým",
+	"general\/settings": "Nastavení stránky týmu",
+	"general\/permission": "Panel > Nastavení stránky týmu",
+	"general\/panel": "Panel",
+	"general\/dashboard": "Nástěnka",
+	"general\/pageTitle": "Název stránky",
+	"general\/linkPath": "Cesta ke stránce",
+	"general\/linkLocation": "Umístění odkazu",
+	"general\/navbar": "Navigační lišta",
+	"general\/navbarMoreDropdown": "Rozbalovací nabídka",
+	"general\/footer": "Zápatí",
+	"general\/none": "Žádné",
+	"general\/navIcon": "Ikona v navigaci",
+	"general\/navOrder": "Pořadí v navigaci",
+	"general\/submit": "Potvrdit",
+	"general\/cancel": "Zrušit",
+	"general\/settingsUpdated": "Nastavení byla úspěšně aktualizována.",
+	"general\/success": "Úspěch",
+	"general\/error": "Chyba",
+	"general\/errorEdit": "Ujistěte se, že jste správně vyplnili všechna pole.",
+	"general\/errorToken": "Neplatný token! Zkuste to prosím znovu."
 }
