--- a/upload/modules/Staff/language/en_UK.json
+++ b/upload/modules/Staff/language/en_UK.json
@@ -1,21 +1,23 @@
 {
-    "general/cancel": "Cancel",
-    "general/error": "Error",
-    "general/errorEdit": "Please ensure the fields are filled correctly.",
-    "general/errorToken": "Invalid token! Please try again.",
-    "general/footer": "Footer",
-    "general/linkLocation": "Link Location",
-    "general/linkPath": "Link Path",
-    "general/navIcon": "Navigation Icon",
-    "general/navOrder": "Navigation Order",
-    "general/navbar": "Navbar",
-    "general/navbarMoreDropdown": "Navbar \"More\" Dropdown",
-    "general/none": "None",
-    "general/pageTitle": "Page Title",
-    "general/panel": "Panel",
-    "general/permission": "Panel > Staff",
-    "general/settings": "Staff",
-    "general/settingsUpdated": "Settings has been successfully updated.",
-    "general/success": "Success",
-    "general/title": "Staff"
+	"general\/title": "Staff",
+	"general\/settings": "Staff Page Settings",
+	"general\/permission": "Panel » Staff Page Settings",
+	"general\/panel": "Panel",
+	"general\/dashboard": "Dashboard",
+	"general\/pageTitle": "Page Title",
+	"general\/linkPath": "Link Path",
+	"general\/linkLocation": "Link Location",
+	"general\/navbar": "Navbar",
+	"general\/navbarMoreDropdown": "Navbar \"More\" Dropdown",
+	"general\/footer": "Footer",
+	"general\/none": "None",
+	"general\/navIcon": "Navigation Icon",
+	"general\/navOrder": "Navigation Order",
+	"general\/submit": "Submit",
+	"general\/cancel": "Cancel",
+	"general\/settingsUpdated": "Settings has been successfully updated.",
+	"general\/success": "Success",
+	"general\/error": "Error",
+	"general\/errorEdit": "Please ensure the fields are filled correctly.",
+	"general\/errorToken": "Invalid token! Please try again."
 }
