--- a/upload/modules/Staff/language/fr_FR.json
+++ b/upload/modules/Staff/language/fr_FR.json
@@ -1,23 +1,23 @@
 {
-    "general/cancel": "Annulé",
-    "general/dashboard": "Tableau de Bord",
-    "general/error": "Erreur",
-    "general/errorEdit": "Merci de rentrer les champs correctement.",
-    "general/errorToken": "Invalid token! Réessayez encore.",
-    "general/footer": "Footer",
-    "general/linkLocation": "Position du lien",
-    "general/linkPath": "Lien de la page",
-    "general/navIcon": "Icon du lien",
-    "general/navOrder": "Ordre Nav.",
-    "general/navbar": "Navbar",
-    "general/navbarMoreDropdown": "Navbar \"Plus\" Dropdown",
-    "general/none": "Aucun(e)",
-    "general/pageTitle": "Titre de la page",
-    "general/panel": "Panel",
-    "general/permission": "Panel > Page Staff",
-    "general/settings": "Page Staff",
-    "general/settingsUpdated": "Les changements ont était modifié avec succès.",
-    "general/submit": "Envoyez",
-    "general/success": "Succès",
-    "general/title": "Staff"
+	"general\/title": "Staff",
+	"general\/settings": "Page Staff",
+	"general\/permission": "Panel > Page Staff",
+	"general\/panel": "Panel",
+	"general\/dashboard": "Tableau de Bord",
+	"general\/pageTitle": "Titre de la page",
+	"general\/linkPath": "Lien de la page",
+	"general\/linkLocation": "Position du lien",
+	"general\/navbar": "Navbar",
+	"general\/navbarMoreDropdown": "Navbar \"Plus\" Dropdown",
+	"general\/footer": "Footer",
+	"general\/none": "Aucun(e)",
+	"general\/navIcon": "Icon du lien",
+	"general\/navOrder": "Ordre Nav.",
+	"general\/submit": "Envoyez",
+	"general\/cancel": "Annulé",
+	"general\/settingsUpdated": "Les changements ont était modifié avec succès.",
+	"general\/success": "Succès",
+	"general\/error": "Erreur",
+	"general\/errorEdit": "Merci de rentrer les champs correctement.",
+	"general\/errorToken": "Invalid token! Réessayez encore."
 }
